--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-permalink: /:year/:month/:day/:title.html   #博文的固定链接
-paginate: 10                                #分页时每页博文数量
-author:                                     #自定义常亮
+permalink: /:year/:month/:day/:title.html   
+paginate: 10                                
+author:                                    
   name: 进冬
   email: jdzhan@live.com
   link: http://jindong.io
-title: 进冬的博客                             #自定义常量
-locals:                                     #自定义常量
+title: 进冬的博客                           
+locals:                                    
   tags: 标签
   about: 关于
-active: 技术                                 #自定义常量
-markdown: redcarpet                         #markdown解释器
+active: 技术                                
+markdown: redcarpet                       
