--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "yizeng.github.io"]
-	path = yizeng.github.io
-	url = https://github.com/yizeng/yizeng.github.io
+[submodule "zhanjindong.github.io"]
+	path = zhanjindong.github.io
+	url = https://github.com/zhanjindong/zhanjindong.github.io
