--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "Personal blog for Jin Dong, a software engineer based in Hefei, Ch
 # tagline: Site Tagline
 author:
   name: Jin Dong
-  username: jindong
+  username: zhanjindong
   stackoverflow: 4186131/jindong
   # twitter: username
   # feedburner: feedname
