--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author:
   name: Jin Dong
   username: zhanjindong
   stackoverflow: 4186131/jindong
+  linkedin:zhanjindong
   # twitter: username
   # feedburner: feedname
 
