--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ kramdown:
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title: Jindong.Io
+title: Jindong
 description: "Personal blog for Jindong, a software engineer based in Hefei, China."
 # tagline: Site Tagline
 author:
