--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,7 @@ translations:
   last_updated: 'Last updated'
 
   # <head>
-  keywords: 'software,engineer,testing,christchurch,newzealand'
+  keywords: 'software,engineer,iflytek,hefei,zhanjindong,,jindong,java'
 
   # site notices
   old_ie_notice: 'You are using an outdated browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">activate Google Chrome Frame</a> to improve your experience.'
