--- a/_config.yml
+++ b/_config.yml
@@ -160,6 +160,7 @@ translations:
   articles: 'Articles'
   categories: 'Categories'
   assets: 'Assets'
+  cnblog: 'CnBlog'
   tags: 'Tags'
   search: 'Search'
 
