--- a/_config.yml
+++ b/_config.yml
@@ -187,7 +187,7 @@ translations:
 
   # 404.html
   404_heading: 'Sorry, the page is not found.'
-  404_content: 'You will be redirected to <a href="/blog">jindong.io/blog/</a> in few seconds.'
+  404_content: 'You will be redirected to <a href="/blog">zhanjindong.com/blog/</a> in few seconds.'
 
 sitemap:
   file: "/sitemap.xml"
