--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ author:
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url: http://zhanjindong.com
-url: http://zhanjindong.com
+production_url: https://zhanjindong.com
+url: https://zhanjindong.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
